# LLM_SuperCLI

./: README.md
llm_supercli/: .gitignore  README.md  fix-secrets.ps1  package.json  pyproject.toml  qwen_help.txt  requirements.txt  test_xml_parser.py
llm_supercli/.hypothesis/constants/: 002f8e82b5308e21  03f03bd2a5da2ef4  171722c7365178a0  2686366ad6063248  2d777dbb4bf7bb9b  33dc2654b4e8791b  38c6f24ad2e29848  493596595c2ff602  4a88a30039e13cc8  4b36ad6c1c67ab2c  5071bbaac5254fbc  5364dc0a0c88e1d3  59232809dc0c46cc  59f84c4b4dd1ddfb  5c5b30794e15ff28  6a478127c28ecb93  76ae08489689a558  77bbf9b6cf48ef93  848ac83778d045b9  8e2c9736181e3c2e  995931841abffa2d  9ff05f2e821bb94f  a3f684e029bd03d8  a41384e868fcd19c  a889eb0277419327  bedd637a2d965685  e1f2bf2978abe842  e6594c2f7a4018ec  e8fc545d38df9a05  e977784ed2903b17
llm_supercli/.hypothesis/tmp/: tmp2hv6x3kq  tmp2qeq6wg3  tmp3b_suroc  tmp53e4vr9_  tmp556x0ta6  tmp5rgice4d  tmp6hoti4l4  tmpbquz5kja  tmpdupqvhes  tmpfpc7c8h3  tmpgk9khsld  tmpnflauvf8  tmpqckilsgi  tmpqybq848t  tmprgd8b1rd  tmprodhrlis  tmpt2wb7f3b  tmpwas4z71m  tmpye_897dg
llm_supercli/llm_supercli/: __init__.py  __main__.py  cli.py  completion_detector.py  config.py  constants.py  context_calculator.py  iteration_controller.py  main.py  model_specs.py  response_validator.py  update_cache.py  update_checker.py  update_notifier.py  utils.py
llm_supercli/llm_supercli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm_supercli/llm_supercli/auth/: __init__.py  gemini_oauth.py  github_oauth.py  google_oauth.py  openai_oauth.py  qwen_oauth.py  session_manager.py
llm_supercli/llm_supercli/command_system/: __init__.py  base.py  parser.py  registry.py
llm_supercli/llm_supercli/history/: __init__.py  db.py  favorites.py  session_store.py
llm_supercli/llm_supercli/io_handlers/: __init__.py  bash_runner.py  chunk_deduplicator.py  clipboard.py  deduplicator.py  error_handler.py  file_creation_enforcer.py  file_loader.py  project_analyzer.py
llm_supercli/llm_supercli/llm/: __init__.py  base.py  gemini.py  (+7 more)
llm_supercli/scripts/: demo.py  postinstall.js  run_tests_allure.ps1  seed_db.py  test_auth.py
llm_supercli/tests/: __init__.py
(+100 files in other folders)
